Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93412

Problem with drawing progressbar as QTreeView delegate

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.3.0 Alpha
    • 6.1.0 RC2
    • Widgets: Itemviews
    • None
    • Ubuntu 18.04 and Qt 6.1 compiled from source.
    • Linux/X11
    • c0bc4c7638d8b7d46f8cb3175ddde2a59ca63983 (qt/qtbase/dev) 18f20ce7288012838be9a3d7511dd06630d62487 (qt/qtbase/6.2)

      I have problem with progressbar delegate rendering since Qt 6.1 (and maybe 6.0), while Qt 5.15.2 has not this issue with same code. See attached screenshots and example.

        1. qt-5.15.2.png
          8 kB
          Ilya Kotov
        2. qt-6.1.png
          7 kB
          Ilya Kotov
        3. test-treeview.tar.gz
          2 kB
          Ilya Kotov
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            trialuser02 Ilya Kotov
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes